apply plugin: 'com.android.application'

android {
    compileSdkVersion 23
    buildToolsVersion "24.0.0"

    defaultConfig {
        applicationId "cz.jaro.alarmmorning"
        minSdkVersion 15
        targetSdkVersion 23
        versionCode 9
        versionName "0.8"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        jackOptions {
            enabled true
        }
    }

    buildTypes {
        release {
            // minifyEnabled true // TODO Hotfix - minimization does not work reliably with Jack. https://code.google.com/p/android/issues/detail?id=218917&sort=-opened&colspec=ID%20Status%20Priority%20Owner%20Summary%20Stars%20Reporter%20Opened
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
    compile 'com.android.support:support-v4:23.1.1'
    compile 'com.android.support:appcompat-v7:23.1.1'
    compile 'com.android.support:recyclerview-v7:23.1.0'
    compile 'com.android.support:design:23.1.1'

    compile 'com.ibm.icu:icu4j:53.1'
    androidTestCompile 'com.ibm.icu:icu4j:53.1'

    compile 'com.github.paolorotolo:appintro:4.0.0'

    compile 'com.google.firebase:firebase-core:9.6.1'
    compile 'com.google.firebase:firebase-crash:9.6.1'

    // Required -- JUnit 4 framework
    testCompile 'junit:junit:4.12'
    // AssertJ
    testCompile "org.assertj:assertj-core:1.7.0"
    // Roboelectric
    testCompile "org.robolectric:robolectric:3.0"
    // Optional -- Mockito framework
    testCompile 'org.mockito:mockito-core:1.10.19'

    androidTestCompile 'com.android.support:support-annotations:24.0.0'
    androidTestCompile 'com.android.support.test:runner:0.4.1'
    androidTestCompile 'com.android.support.test:rules:0.4.1'
    // Optional -- Hamcrest library
    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
    // Optional -- UI testing with Espresso
    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
    // Optional -- UI testing with UI Automator
    // androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
}

apply plugin: 'com.google.gms.google-services'